# sabjiwala

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PIPELINE_API_URL_GUIDE.md  README.md  SECURITY.md  docker-compose.yml  fix_icons.js  package.json  patch.js  patch2.js  patch3.js  patch4.js  patch_layouts.py  patch_updater.py  patch_version_ui.py  release_backup.yml  run-local.ps1
apps/backend/: add_columns.py  add_flags.py  add_radius.py  pyproject.toml  seed_categories.py  test_auth_flows.py
apps/backend/app/: main.py
apps/backend/app/api/: schemas.py
apps/backend/app/api/v1/: __init__.py  router.py
apps/backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  cart.py  catalog.py  chat.py  coupons.py  delivery.py  delivery_append_helper.py  health.py  installation.py  maps.py  notifications.py  offers.py  orders.py  pages.py  payments.py  products.py  reviews.py  search.py  storage.py  (+8 more)
apps/backend/app/core/: __init__.py  config.py  middleware.py
apps/backend/app/core/rbac/: __init__.py  engine.py  seed.py
apps/backend/app/core/security/: __init__.py  encryption.py  jwt.py  mfa.py  otp.py  password.py  rate_limiter.py
apps/backend/app/db/: base.py  engine.py  seed.py  session.py
apps/backend/app/models/: __init__.py  chat.py  cms.py  coupon.py  delivery.py  notification.py  order.py  payment.py  product.py  search.py  storage.py  support.py  system.py  user.py  vendor.py
apps/backend/app/services/: analytics_service.py  chat_service.py  coupon_engine.py  delivery_assignment_service.py  invoice_service.py  map_service.py  notification_service.py  order_service.py  payment_service.py  referral_service.py  search_service.py  settlement_service.py  storage_service.py
apps/backend/app/templates/: invoice.html
apps/backend/app/websocket/: __init__.py  handlers.py  manager.py
apps/backend/app/workers/: __init__.py  celery_app.py
(+468 files in other folders)
