[project]
name = "sabjiwala-backend"
version = "1.0.0"
description = "SabjiWala.in - Production Grade Multi-Tenant Vegetable Commerce Platform"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Celery
    "celery[redis]>=5.4.0",
    # Auth
    "pyjwt>=2.10.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "httpx>=0.28.0",
    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    # Storage & Media
    "pillow>=11.0.0",
    "python-magic>=0.4.27",
    "cryptography>=44.0.0",
    # Notifications
    "aiosmtplib>=3.0.0",
    "pywebpush>=2.0.0",
    "jinja2>=3.1.4",
    # Maps
    "geopy>=2.4.1",
    "shapely>=2.0.6",
    # Utils
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "uuid6>=2024.7.10",
    "structlog>=24.4.0",
    # Dev
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "locust>=2.32.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
